🐛 fix by gemini3 this is the main reason